tests/semantica/valid/declaracion/test2.ctds
program 
    {
		integer foo(){
			return 2;
		}

		void main(){
			integer x = foo();

			x = 2;
		}
    }