tests/semantica/invalid/asignacion/test4.ctds
program 
    {
        integer foo(){
            return 2;
        }

        void main(){
            bool x = true;
            x = foo();
        }
    }